--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -14,6 +14,7 @@ coverage = "^6.4.4"
 pylint = "^2.15.0"
 flake8 = "^5.0.4"
 bandit = "^1.7.4"
+setuptools = "^65.3.0"
 
 [tool.poetry.dev-dependencies]
 nox = "^2022.8.7"
